<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools" android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    tools:context = "com.archaeology.ui.MyWiFiActivity">
    <view
        android:layout_width = "wrap_content"
        android:layout_height = "200dp"
        class = "com.archaeology.ui.SimpleStreamSurfaceView"
        android:id = "@+id/surfaceview_liveview"
        android:layout_centerHorizontal = "true"/>
    <ScrollView
        android:layout_width = "match_parent"
        android:layout_height = "match_parent"
        android:layout_below = "@+id/surfaceview_liveview">
        <RelativeLayout
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content" android:paddingLeft = "@dimen/activity_horizontal_margin"
            android:paddingRight = "@dimen/activity_horizontal_margin"
            android:paddingTop = "@dimen/activity_vertical_margin"
            android:paddingBottom = "@dimen/activity_vertical_margin">

            <Button
                android:id="@+id/button14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:enabled="false"
                android:onClick="discoverPeers"
                android:text="@string/find_peers" />

            <Button
                android:id="@+id/button15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button14"
                android:layout_centerHorizontal="true"
                android:onClick="showIPAddress"
                android:text="@string/get_ips" />
            <Button
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:text = "@string/api_call"
                android:id = "@+id/button20"
                android:layout_below = "@+id/button15"
                android:layout_centerHorizontal = "true"
                android:onClick = "takePhoto"/>
            <ImageView
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:id = "@+id/sonyCameraPhoto"
                android:layout_below = "@+id/button22"
                android:layout_centerHorizontal = "true"
                android:contentDescription="@string/camera_live_view"/>
            <Button
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:text = "@string/start_live"
                android:id = "@+id/button21"
                android:layout_below = "@+id/button20"
                android:layout_centerHorizontal = "true"
                android:onClick = "startLiveView"/>
            <Button
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:text = "@string/stop_live"
                android:id = "@+id/button22"
                android:layout_below = "@+id/button21"
                android:layout_centerHorizontal = "true"
                android:onClick = "stopLiveView"/>
            <Button
                style = "?android:attr/buttonStyleSmall"
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:text = "@string/zoom_in"
                android:id = "@+id/button23"
                android:layout_below = "@+id/button22"
                android:layout_centerHorizontal = "true"
                android:onClick = "zoomIn"/>
            <EditText
                android:layout_width = "match_parent"
                android:layout_height = "wrap_content"
                android:id = "@+id/apiFunctionName"
                android:layout_below = "@+id/button22"
                android:layout_centerHorizontal = "true"
                android:hint="@string/api_call"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>