<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools" android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    tools:context = "com.archaeology.ui.ObjectDetailActivity">
    <ScrollView
        android:layout_width = "match_parent"
        android:layout_height = "match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/sampleNumberLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="10dp"
                android:background="#d7c474"
                android:text="@string/sample"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sampleInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/sampleNumberLabel"
                android:background="#d7c474"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sample_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/sampleInfo" />

            <Button
                android:id="@+id/nextObjectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/previousObjectButton"
                android:layout_alignBottom="@+id/previousObjectButton"
                android:layout_toEndOf="@+id/previousObjectButton"
                android:onClick="goToNextItemIfAvailable"
                android:text="@string/next" />

            <Button
                android:id="@+id/previousObjectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/sampleInfo"
                android:onClick="goToPreviousItemIfAvailable"
                android:text="@string/previous" />

            <TextView
                android:id="@+id/weightInput"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/nextObjectButton"
                android:layout_toStartOf="@+id/textView26"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/sample_spinner"
                android:layout_alignParentEnd="true"
                android:text="@string/gram"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/button16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/nextObjectButton"
                android:layout_alignBottom="@+id/nextObjectButton"
                android:layout_alignEnd="@+id/textView26"
                android:onClick="startRecordWeight"
                android:text="@string/record_weight" />

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/sampleNumberLabel"
                android:layout_marginTop="30dp"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/surface"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView28"
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/hue"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView29"
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/lightness"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView30"
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/chroma"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:id="@+id/exteriorColorRow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView31"
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/exterior_color"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/black"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/exterior_color_hue"
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/exterior_color_lightness"
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/exterior_color_chroma"
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:layout_column="3"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/black" />
                </TableRow>

                <TableRow
                    android:id="@+id/interiorColorRow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView35"
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/interior_color"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/black"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/interior_color_hue"
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/interior_color_lightness"
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/interior_color_chroma"
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:layout_column="3"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/black" />
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/connectToCameraText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tableLayout"
                android:gravity="center"
                android:text="@string/no_remote_camera"
                android:textColor="@android:color/holo_red_dark" />

            <HorizontalScrollView
                android:id="@+id/photoScrollWrapper"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/connectToCameraText">

                <fragment
                    android:id="@+id/fragment"
                    android:name="com.archaeology.ui.PhotoFragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:layout="@layout/photo_fragment" />
            </HorizontalScrollView>

            <Button
                android:id="@+id/button26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/photoScrollWrapper"
                android:onClick="addPhotoAction"
                android:text="@string/add_photo" />

            <Button
                android:id="@+id/correct_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button26"
                android:onClick="goToImageGallery"
                android:text="@string/correct_color" />

            <Button
                android:id="@+id/wifiActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/correct_color"
                android:onClick="goToWiFiActivity"
                android:text="@string/configure_camera" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>