<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools" android:layout_width = "match_parent"
    android:layout_height = "match_parent" android:paddingLeft = "@dimen/activity_horizontal_margin"
    android:paddingRight = "@dimen/activity_horizontal_margin"
    android:paddingTop = "@dimen/activity_vertical_margin"
    android:paddingBottom = "@dimen/activity_vertical_margin"
    tools:context = "objectphotography2.com.object.photography.objectphotography_app.CeramicInput2Activity">
    <ScrollView
        android:layout_width = "match_parent"
        android:layout_height = "match_parent"
        android:layout_above = "@+id/linearLayout2">
        <RelativeLayout
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content">
            <TableLayout
                android:layout_width = "match_parent"
                android:layout_height = "match_parent"
                android:stretchColumns = "*">
                <TableRow
                    android:layout_width = "match_parent"
                    android:layout_height = "match_parent">
                    <TextView
                        android:layout_width = "wrap_content"
                        android:layout_height = "wrap_content"
                        android:textAppearance = "?android:attr/textAppearanceMedium"
                        android:text = "@string/easting"
                        android:id = "@+id/textView18"
                        android:gravity = "center"/>
                    <TextView
                        android:layout_width = "wrap_content"
                        android:layout_height = "wrap_content"
                        android:textAppearance = "?android:attr/textAppearanceMedium"
                        android:text = "@string/northing"
                        android:id = "@+id/textView19"
                        android:gravity = "center"/>
                    <TextView
                        android:layout_width = "wrap_content"
                        android:layout_height = "wrap_content"
                        android:textAppearance = "?android:attr/textAppearanceMedium"
                        android:text = "@string/context_number"
                        android:id = "@+id/textView20"
                        android:gravity = "center"/>
                    <TextView
                        android:layout_width = "wrap_content"
                        android:layout_height = "wrap_content"
                        android:textAppearance = "?android:attr/textAppearanceMedium"
                        android:text = "@string/sample_number"
                        android:id = "@+id/textView21"
                        android:gravity = "center"/>
                </TableRow>
                <TableRow
                    android:layout_width = "match_parent"
                    android:layout_height = "match_parent">
                    <Spinner
                        android:layout_width = "1dp"
                        android:layout_height = "wrap_content"
                        android:id = "@+id/easting_spinner"/>
                    <Spinner
                        android:layout_width = "1dp"
                        android:layout_height = "wrap_content"
                        android:id = "@+id/northing_spinner"/>
                    <Spinner
                        android:layout_width = "1dp"
                        android:layout_height = "wrap_content"
                        android:id = "@+id/context_spinner"/>
                    <Spinner
                        android:layout_width = "1dp"
                        android:layout_height = "wrap_content"
                        android:id = "@+id/sample_spinner"/>
                </TableRow>
            </TableLayout>
        </RelativeLayout>
    </ScrollView>
    <LinearLayout
        android:orientation = "horizontal"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:layout_alignParentBottom = "true"
        android:layout_centerHorizontal = "true"
        android:weightSum = "2"
        android:id = "@+id/linearLayout2">
        <Button
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/cancel"
            android:id = "@+id/button13"
            android:layout_weight = "1"
            android:onClick = "goPrevious"/>
        <Button
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:text = "@string/continue_string"
            android:id = "@+id/continue_button"
            android:layout_weight = "1"
            android:onClick = "goToObjectDetail"/>
    </LinearLayout>
</RelativeLayout>