<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools" android:layout_width = "match_parent"
    android:layout_height = "match_parent" android:paddingLeft = "@dimen/activity_horizontal_margin"
    android:paddingRight = "@dimen/activity_horizontal_margin"
    android:paddingTop = "@dimen/activity_vertical_margin"
    android:paddingBottom = "@dimen/activity_vertical_margin" tools:context = "com.archaeology.ui.InitialActivity">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp"
        android:minWidth="400dp"
        android:text="@string/base_url"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black" />
    <EditText
        android:id="@+id/urlText"
        style="@style/EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:enabled="false"
        android:lines="1"
        android:maxLines="1"
        android:minWidth="400dp"
        android:text="@string/default_base_url"
        android:hint="@string/base_url"
        android:inputType="textUri"/>
    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:minWidth="400dp"
        android:text="@string/select_schema"
        android:layout_below="@+id/urlText"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black" />
    <Spinner
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/schemaSelectBox"
        android:layout_below = "@+id/textView11"
        android:layout_centerHorizontal = "true"
        android:layout_alignParentStart="true"
        android:minWidth = "400dp"
        android:entries = "@array/schema_list"/>
    <Button
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:text = "@string/connect"
        android:id = "@+id/connectButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal = "true"
        android:enabled = "false"
        android:onClick = "testConnection"/>
</RelativeLayout>